--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
         </div>
     </div>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="jsmain.js"></script>
 </body>
+
 </html>
