--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
             font-family: 'Inter', sans-serif;
             @apply bg-gray-100 flex justify-center items-start min-h-screen p-6;
         }
-        /* Hide the modal by default */
-        .modal {
-            display: none;
-        }
+
         /* Basic styling for task items */
         .task-item {
             @apply flex items-center justify-between bg-white p-4 rounded-lg shadow-sm mb-3;
@@ -27,6 +24,7 @@
         /* Styling for dragged item */
         .task-item.dragging {
             @apply opacity-50 border-2 border-dashed border-blue-400;
+            cursor: grabbing; /* GEÄNDERT: Bessere UX beim Ziehen */
         }
         /* Styling for drop target indicators */
         .task-item.drag-over-top {
@@ -141,7 +139,7 @@
         </div>
     </div>
 
-    <div id="settingsModal" class="modal fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center p-4">
+    <div id="settingsModal" class="hidden fixed inset-0 bg-black bg-opacity-40 items-center justify-center p-4">
         <div class="modal-content bg-white rounded-xl shadow-2xl p-8 w-full max-w-md relative">
             <span id="closeModalBtn" class="absolute top-4 right-6 text-gray-500 text-4xl leading-none cursor-pointer hover:text-gray-800">&times;</span>
             <h2 class="text-3xl font-bold text-gray-800 mb-6 border-b pb-4">Einstellungen</h2>
