--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             theme: {
                 extend: {
                     colors: {
-                        // Definiere eine neue Primärfarbe (Teal/Cyan)
+                        // Definiere eine neue Primärfarbe (Teal/Cyan - RoomRaccoon inspiriert)
                         primary: {
                             DEFAULT: '#009688', // Teal 600
                             light: '#4DB6AC',   // Teal 400
@@ -34,7 +34,7 @@
     </script>
 
     <style>
-        /* Basis Styles (angepasst an neues Design) */
+        /* --- Basis Styles & Layout --- */
         body {
             font-family: 'Inter', sans-serif;
             @apply bg-background flex justify-center items-center min-h-screen p-4 md:p-6;
@@ -46,7 +46,7 @@
             @apply bg-surface rounded-xl shadow-lg;
         }
 
-        /* Task Item Styles */
+        /* --- Task Item Styles --- */
         .task-item {
             @apply flex items-start justify-between bg-white p-4 rounded-lg shadow-sm mb-3 flex-wrap relative overflow-hidden pl-6 border border-gray-100;
         }
@@ -68,7 +68,8 @@
         .task-item.overdue {
             @apply border-2 border-red-400 bg-red-50;
         }
-        /* ... (Drag&Drop Styles angepasst) ... */
+        
+        /* --- Drag&Drop Styles (angepasst) --- */
         .task-item.dragging {
             @apply opacity-50 border-2 border-dashed border-primary-dark;
             cursor: grabbing;
@@ -86,7 +87,7 @@
             @apply bg-primary-light bg-opacity-20 rounded-lg;
         }
 
-        /* Settings Modal Styles */
+        /* --- Settings Modal Styles --- */
         .remove-timeslot-btn {
             @apply text-red-500 hover:text-red-700 w-6 h-6 flex items-center justify-center rounded-full;
         }
@@ -102,12 +103,12 @@
             margin-bottom: 0;
         }
 
-        /* Notizen Styles */
+        /* --- Notizen Styles --- */
         .task-notes-content {
             @apply text-sm text-gray-600 mt-2 p-3 bg-gray-50 rounded-lg whitespace-pre-wrap w-full ml-8;
         }
 
-        /* User Assignment Styles */
+        /* --- User Assignment Styles --- */
         .assigned-users-display {
             @apply flex items-center space-x-1 ml-4;
         }
@@ -116,15 +117,16 @@
             @apply inline-flex items-center justify-center h-6 px-2 rounded-full bg-primary-light bg-opacity-30 text-xs font-semibold text-primary-dark border border-primary;
         }
 
-        /* UI FIX FÜR MODALS (Scrollbar) */
+        /* --- UI FIX FÜR MODALS (Scrollbar und Layout Fix) --- */
         .modal-overlay {
-            /* Stellt sicher, dass das Overlay den ganzen Bildschirm bedeckt und Abstand zum Rand lässt */
+            /* Stellt sicher, dass das Overlay den ganzen Bildschirm bedeckt und Abstand zum Rand lässt (p-4) */
              @apply fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4;
         }
 
         .modal-container {
-            /* Stellt sicher, dass das Modal nicht höher als der verfügbare Platz im Overlay ist (max-height: 100% vom Parent) */
-            /* Flex-col ist entscheidend für das interne Scrollen */
+            /* WICHTIG: max-height: 100% bedeutet 100% des Eltern-Elements (modal-overlay). 
+               Da das Overlay p-4 hat, entstehen die gewünschten Ränder.
+               Flex-col ist entscheidend für das interne Scrollen. */
             max-height: 100%; 
             @apply flex flex-col bg-surface rounded-xl shadow-2xl w-full relative;
         }
@@ -134,15 +136,15 @@
              @apply p-8;
         }
         .modal-header {
-            /* Fixierter Header */
-            @apply p-8 pb-4 border-b;
+            /* Fixierter Header (flex-shrink-0 verhindert, dass er zusammengedrückt wird) */
+            @apply p-8 pb-4 border-b flex-shrink-0;
         }
         .modal-footer {
             /* Fixierter Footer */
-             @apply p-8 pt-4 border-t;
+             @apply p-8 pt-4 border-t flex-shrink-0;
         }
 
-         /* Styles für Filter-Checkboxen (Toggles) */
+         /* --- Styles für Filter-Checkboxen (Toggles) --- */
         .filter-checkbox-label input[type="checkbox"] {
             @apply sr-only; /* Versteckt die Standard-Checkbox */
         }
@@ -158,7 +160,7 @@
             @apply bg-accent text-white border-accent shadow-md;
         }
 
-        /* Button Styles (angepasst an neues Design) */
+        /* --- Button Styles (angepasst an neues Design) --- */
         .btn-primary {
             @apply bg-primary hover:bg-primary-dark text-white font-bold py-3 rounded-lg shadow-md transition duration-300;
         }
@@ -208,8 +210,8 @@
         <p id="auth-error" class="text-red-500 mt-4 text-center"></p>
     </div>
 
-
     <div id="app-container" class="hidden container p-5 md:p-8 max-w-4xl w-full">
+        
         <div class="flex justify-between items-center mb-8">
             <h1 class="text-3xl font-bold text-gray-800">Meine To-Do-Liste</h1>
             <div class="flex items-center space-x-4">
@@ -319,6 +321,7 @@
             <p class="font-bold">Filter aktiv</p>
             <p>Gefilterte Aufgaben werden priorisiert eingeplant und markiert (<span class="ring-2 ring-offset-1 ring-accent px-1">Beispiel</span>). Andere Aufgaben werden danach eingeplant.</p>
         </div>
+
 
         <div data-date-offset="0" class="bg-gray-50 rounded-lg p-6 shadow-sm border border-gray-200 mb-6 border-l-8 border-primary">
             <h2 class="text-2xl font-semibold text-gray-800 mb-3">Heute</h2>
