Neuer Versuch anzeigefehler

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         </div>
     </div>
 
-    <div id="settingsModal" class="hidden modal-overlay">
+    <div id="settingsModal" class="hidden lg:block w-full max-w-md flex-shrink-0">
         <div class="modal-container max-w-md">
              <div class="modal-header">
                  <span id="closeModalBtn" class="absolute top-4 right-6 text-gray-500 text-4xl leading-none cursor-pointer hover:text-gray-800">&times;</span>
@@ -405,7 +405,7 @@
         </div>
     </div>
 
-    <div id="editTaskModal" class="hidden lg:block w-full max-w-lg flex-shrink-0">
+    <div id="editTaskModal" class="hidden lg:block w-full max-w-lg flex-shrink-0"> <!-- Diese Zeile war schon korrekt, bleibt unverändert -->
         <div class="modal-container max-w-lg">
             
             <div class="modal-header">
