--- a/index.html
+++ b/index.html
@@ -210,15 +210,6 @@
         <p id="auth-error" class="text-red-500 mt-4 text-center"></p>
     </div>
 
-    <!-- NEU: Haupt-Layout-Container für Desktop-Ansicht (Liste links, Bearbeiten rechts) -->
-    <div id="main-layout" class="w-full max-w-7xl hidden">
-        <!-- Dieser Container wird die Klassen vom app-container übernehmen -->
-        <div id="app-content-wrapper">
-            <!-- Der ursprüngliche app-container wird hier hinein verschoben -->
-        </div>
-        <!-- Das editTaskModal wird hier hinein verschoben -->
-    </div>
-
     <div id="app-container" class="hidden container p-5 md:p-8 max-w-4xl w-full">
         
         <div class="flex justify-between items-center mb-8">
@@ -369,7 +360,7 @@
         </div>
     </div>
 
-    <div id="settingsModal" class="hidden lg:block w-full max-w-md flex-shrink-0">
+    <div id="settingsModal" class="hidden modal-overlay">
         <div class="modal-container max-w-md">
              <div class="modal-header">
                  <span id="closeModalBtn" class="absolute top-4 right-6 text-gray-500 text-4xl leading-none cursor-pointer hover:text-gray-800">&times;</span>
@@ -405,7 +396,7 @@
         </div>
     </div>
 
-    <div id="editTaskModal" class="hidden lg:block w-full max-w-lg flex-shrink-0"> <!-- Diese Zeile war schon korrekt, bleibt unverändert -->
+    <div id="editTaskModal" class="hidden modal-overlay">
         <div class="modal-container max-w-lg">
             
             <div class="modal-header">
